## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = skiena_3_16

skiena_3_16_SOURCES = \
	main.cc \
	linked_list.cxx \
	linked_list.h

skiena_3_16_CXXFLAGS = --std=c++11 

skiena_3_16_CFLAGS = --std=c++11 

skiena_3_16_CPPFLAGS = --std=c++11 

skiena_3_16_LDFLAGS = 

skiena_3_16_LDADD = 


